--- a/notebooks/out_of_domain_uncertainty_poor_income_10K/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_10K/Income_2018_Batch2.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a46d981",
+   "id": "a2de7d14",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:50.825923Z",
-     "start_time": "2023-10-18T11:18:50.824677Z"
+     "end_time": "2023-10-18T11:47:33.745404Z",
+     "start_time": "2023-10-18T11:47:33.662471Z"
     }
    },
    "outputs": [],
@@ -18,11 +18,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "27a05649",
+   "id": "80b3c419",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:50.830003Z",
-     "start_time": "2023-10-18T11:18:50.825773Z"
+     "end_time": "2023-10-18T11:47:33.745968Z",
+     "start_time": "2023-10-18T11:47:33.662596Z"
     }
    },
    "outputs": [],
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "226d181f",
+   "execution_count": 3,
+   "id": "9038c829",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:50.830170Z",
-     "start_time": "2023-10-18T11:18:50.827812Z"
+     "end_time": "2023-10-18T11:47:33.787424Z",
+     "start_time": "2023-10-18T11:47:33.664289Z"
     }
    },
    "outputs": [],
@@ -51,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "06c7cc86",
+   "execution_count": 4,
+   "id": "ef333282",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:50.834062Z",
-     "start_time": "2023-10-18T11:18:50.831078Z"
+     "end_time": "2023-10-18T11:47:33.787963Z",
+     "start_time": "2023-10-18T11:47:33.666425Z"
     }
    },
    "outputs": [],
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d6dcd25d",
+   "execution_count": 5,
+   "id": "3b7e541d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:50.837448Z",
-     "start_time": "2023-10-18T11:18:50.832904Z"
+     "end_time": "2023-10-18T11:47:33.788211Z",
+     "start_time": "2023-10-18T11:47:33.669082Z"
     }
    },
    "outputs": [],
@@ -81,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f9005144",
+   "execution_count": 1,
+   "id": "a7cf1ace",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:51.238616Z",
-     "start_time": "2023-10-18T11:18:50.838103Z"
+     "end_time": "2023-10-18T11:47:34.034826Z",
+     "start_time": "2023-10-18T11:47:33.673478Z"
     }
    },
    "outputs": [],
@@ -98,12 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "acfc3143",
+   "execution_count": 2,
+   "id": "a7462629",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:51.247405Z",
-     "start_time": "2023-10-18T11:18:51.236364Z"
+     "end_time": "2023-10-18T11:47:34.044978Z",
+     "start_time": "2023-10-18T11:47:34.035492Z"
     }
    },
    "outputs": [],
@@ -116,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f5e1d089",
+   "execution_count": 3,
+   "id": "b1e2e460",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:51.255890Z",
-     "start_time": "2023-10-18T11:18:51.246183Z"
+     "end_time": "2023-10-18T11:47:34.057334Z",
+     "start_time": "2023-10-18T11:47:34.045199Z"
     }
    },
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b669d78",
+   "id": "a85c05ad",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -151,12 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e1c0dc45",
+   "execution_count": 4,
+   "id": "3e97a8f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:52.832881Z",
-     "start_time": "2023-10-18T11:18:51.255347Z"
+     "end_time": "2023-10-18T11:47:35.367305Z",
+     "start_time": "2023-10-18T11:47:34.054660Z"
     }
    },
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90ad32e",
+   "id": "8a69935e",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -196,32 +196,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e3bb4756",
+   "execution_count": 5,
+   "id": "301ce488",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:52.854642Z",
-     "start_time": "2023-10-18T11:18:52.832133Z"
+     "end_time": "2023-10-18T11:47:35.397426Z",
+     "start_time": "2023-10-18T11:47:35.368828Z"
     }
    },
    "outputs": [],
    "source": [
     "# ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
     "ROOT_DIR = os.getcwd()\n",
-    "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income_10K'\n",
+    "EXPERIMENT_NAME = 'out_of_domain_uncertainty_poor_income_10K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 10_000\n",
     "SAMPLES_PER_FOLD_FOR_TUNING = TRAIN_SET_SUBSAMPLE_SIZE // 3\n",
     "\n",
-    "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
+    "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'poor_income_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7454c5aa",
+   "id": "e1c64f50",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,12 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "803a6cdd",
+   "execution_count": 6,
+   "id": "0e811508",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:52.879154Z",
-     "start_time": "2023-10-18T11:18:52.854936Z"
+     "end_time": "2023-10-18T11:47:35.418839Z",
+     "start_time": "2023-10-18T11:47:35.391158Z"
     }
    },
    "outputs": [
@@ -244,7 +244,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,12 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b6141032",
+   "execution_count": 7,
+   "id": "103dc711",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:53.229388Z",
-     "start_time": "2023-10-18T11:18:52.878562Z"
+     "end_time": "2023-10-18T11:47:35.771245Z",
+     "start_time": "2023-10-18T11:47:35.416141Z"
     }
    },
    "outputs": [],
@@ -276,12 +276,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6d369e0d",
+   "execution_count": 8,
+   "id": "b3627a0c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:53.258109Z",
-     "start_time": "2023-10-18T11:18:53.229616Z"
+     "end_time": "2023-10-18T11:47:35.801360Z",
+     "start_time": "2023-10-18T11:47:35.771943Z"
     }
    },
    "outputs": [
@@ -289,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  4e9fd3e5-b7f5-4eb5-82c7-af332b203703\n"
+      "Current session uuid:  55cb3a96-48b7-43bb-8f42-9590e2c344cc\n"
      ]
     }
    ],
@@ -298,14 +298,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '4e9fd3e5-b7f5-4eb5-82c7-af332b203703',\n",
+    "    'session_uuid': '55cb3a96-48b7-43bb-8f42-9590e2c344cc',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7cdb8ef",
+   "id": "82910625",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c4d3a49c",
+   "execution_count": 9,
+   "id": "d191277a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:56.752938Z",
-     "start_time": "2023-10-18T11:18:53.256761Z"
+     "end_time": "2023-10-18T11:47:39.206678Z",
+     "start_time": "2023-10-18T11:47:35.801299Z"
     }
    },
    "outputs": [
@@ -434,7 +434,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,12 +447,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "fedb8440",
+   "execution_count": 10,
+   "id": "e1230eeb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:56.777582Z",
-     "start_time": "2023-10-18T11:18:56.750557Z"
+     "end_time": "2023-10-18T11:47:39.264041Z",
+     "start_time": "2023-10-18T11:47:39.204075Z"
     }
    },
    "outputs": [
@@ -462,7 +462,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,12 +473,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d9671e8f",
+   "execution_count": 11,
+   "id": "a74d8167",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:59.891764Z",
-     "start_time": "2023-10-18T11:18:56.775269Z"
+     "end_time": "2023-10-18T11:47:42.342020Z",
+     "start_time": "2023-10-18T11:47:39.231541Z"
     }
    },
    "outputs": [
@@ -594,7 +594,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,12 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a9f9d6ed",
+   "execution_count": 12,
+   "id": "287307bb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:59.949415Z",
-     "start_time": "2023-10-18T11:18:59.891039Z"
+     "end_time": "2023-10-18T11:47:42.402947Z",
+     "start_time": "2023-10-18T11:47:42.341648Z"
     }
    },
    "outputs": [
@@ -622,7 +622,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,22 +633,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6705f0e5",
+   "execution_count": 13,
+   "id": "03b1f353",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:59.958879Z",
-     "start_time": "2023-10-18T11:18:59.917650Z"
+     "end_time": "2023-10-18T11:47:42.403287Z",
+     "start_time": "2023-10-18T11:47:42.364568Z"
     }
    },
    "outputs": [],
    "source": [
-    "extra_data_loaders = [data_loader_poor]"
+    "extra_data_loaders = [data_loader_rich]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bc98c6e6",
+   "id": "a394de9a",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa26ef0",
+   "id": "9a73b856",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,12 +664,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "13e02be6",
+   "execution_count": 14,
+   "id": "c7b235af",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:18:59.973850Z",
-     "start_time": "2023-10-18T11:18:59.940479Z"
+     "end_time": "2023-10-18T11:47:42.453732Z",
+     "start_time": "2023-10-18T11:47:42.389233Z"
     }
    },
    "outputs": [],
@@ -681,12 +681,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "884932f5",
+   "execution_count": 15,
+   "id": "ab160bd8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:19:00.023397Z",
-     "start_time": "2023-10-18T11:18:59.962459Z"
+     "end_time": "2023-10-18T11:47:42.479522Z",
+     "start_time": "2023-10-18T11:47:42.412316Z"
     }
    },
    "outputs": [],
@@ -696,19 +696,19 @@
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
-    "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
+    "exp_iter_data_loader = copy.deepcopy(data_loader_poor)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
     "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e16bea94",
+   "execution_count": 16,
+   "id": "b2b44c92",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:25:26.886638Z",
-     "start_time": "2023-10-18T11:19:00.023833Z"
+     "end_time": "2023-10-18T11:53:41.816022Z",
+     "start_time": "2023-10-18T11:47:42.472468Z"
     }
    },
    "outputs": [
@@ -716,7 +716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 09:03:18 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-18 09:28:18 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -726,9 +726,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '4e9fd3e5-b7f5-4eb5-82c7-af332b203703'}\n",
+      " 'session_uuid': '55cb3a96-48b7-43bb-8f42-9590e2c344cc'}\n",
       "\n",
       "\n",
       "X_train_val.shape --  (10000, 9)\n",
@@ -741,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 09:03:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-18 09:28:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -762,7 +762,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66d5e6c0e9264297936d0809b232dcc6",
+       "model_id": "71f3bf54a040435387d3209ec5d60aa3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -777,14 +777,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n"
+      "intervention_param:  0.7\n",
+      "cur_extra_test_sets[0].shape --  (100000, 680)\n",
+      "2023/10/18, 09:36:25: Tuning RandomForestClassifier...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 09:18:36 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-10-18 09:40:38 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
@@ -792,14 +794,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/18, 09:18:36: Tuning for RandomForestClassifier is finished [F1 score = 0.6448662703849747, Accuracy = 0.702970297029703]\n",
+      "2023/10/18, 09:40:38: Tuning for RandomForestClassifier is finished [F1 score = 0.557562214020437, Accuracy = 0.625962596259626]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d976d01d3a5423aa4c53d8bc92dd0b6",
+       "model_id": "8e3c9d6815ef47c5a9aa6f368d0edf1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -813,7 +815,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d201f4ddd244fcf9ca5b5dd77451874",
+       "model_id": "2ce17c72608d4c1c8a67fe93a9f6f290",
        "version_major": 2,
        "version_minor": 0
       },
@@ -846,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b74df6d4",
+   "id": "8dcb8c24",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -854,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "495c451a",
+   "id": "8823f023",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -862,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e173e9",
+   "id": "ee7321bb",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -870,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37bf2431",
+   "id": "be401bb6",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c26dd3",
+   "id": "ca7e9766",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -887,11 +889,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b222a3e",
+   "id": "c89c6a6b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-18T11:25:26.890046Z",
-     "start_time": "2023-10-18T11:25:26.886362Z"
+     "end_time": "2023-10-18T11:53:41.820296Z",
+     "start_time": "2023-10-18T11:53:41.819196Z"
     }
    },
    "outputs": [],
