--- a/notebooks/out_of_domain_uncertainty_rich_income_10K/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_10K/Income_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3a46d981",
+   "id": "8d731bfd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:50.825923Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "27a05649",
+   "id": "a7b35db2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:50.830003Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "226d181f",
+   "id": "7523ee45",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:50.830170Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "06c7cc86",
+   "id": "1d9e85a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:50.834062Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d6dcd25d",
+   "id": "12020da7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:50.837448Z",
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f9005144",
+   "execution_count": 1,
+   "id": "dc7355b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:51.238616Z",
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "acfc3143",
+   "execution_count": 2,
+   "id": "6972785f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:51.247405Z",
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f5e1d089",
+   "execution_count": 3,
+   "id": "81bd179a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:51.255890Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b669d78",
+   "id": "c1abbfc0",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e1c0dc45",
+   "execution_count": 4,
+   "id": "45dfcb5a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:52.832881Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90ad32e",
+   "id": "5b3a5fd0",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e3bb4756",
+   "execution_count": 5,
+   "id": "27f8335f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:52.854642Z",
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income_10K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 10_000\n",
     "SAMPLES_PER_FOLD_FOR_TUNING = TRAIN_SET_SUBSAMPLE_SIZE // 3\n",
     "\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7454c5aa",
+   "id": "6c5006e2",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,8 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "803a6cdd",
+   "execution_count": 6,
+   "id": "7dc62ce4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:52.879154Z",
@@ -244,7 +244,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b6141032",
+   "execution_count": 7,
+   "id": "0f349144",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:53.229388Z",
@@ -276,8 +276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6d369e0d",
+   "execution_count": 8,
+   "id": "462fade0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:53.258109Z",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7cdb8ef",
+   "id": "9688e8a9",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c4d3a49c",
+   "execution_count": 9,
+   "id": "c6cdd211",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:56.752938Z",
@@ -434,7 +434,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "fedb8440",
+   "execution_count": 10,
+   "id": "97b22269",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:56.777582Z",
@@ -462,7 +462,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,8 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d9671e8f",
+   "execution_count": 11,
+   "id": "695e887d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:59.891764Z",
@@ -594,7 +594,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,8 +607,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a9f9d6ed",
+   "execution_count": 12,
+   "id": "5ccb1491",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:59.949415Z",
@@ -622,7 +622,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,8 +633,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "6705f0e5",
+   "execution_count": 13,
+   "id": "e7a3afa6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:59.958879Z",
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc98c6e6",
+   "id": "4b5a9c71",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa26ef0",
+   "id": "b378019a",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,8 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "13e02be6",
+   "execution_count": 14,
+   "id": "886a4e97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:18:59.973850Z",
@@ -681,8 +681,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "884932f5",
+   "execution_count": 15,
+   "id": "a077e9b2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:19:00.023397Z",
@@ -703,8 +703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e16bea94",
+   "execution_count": 16,
+   "id": "600c262d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:25:26.886638Z",
@@ -716,7 +716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 09:03:18 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-18 09:17:46 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -726,7 +726,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': '4e9fd3e5-b7f5-4eb5-82c7-af332b203703'}\n",
       "\n",
@@ -741,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 09:03:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-18 09:17:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -762,7 +762,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66d5e6c0e9264297936d0809b232dcc6",
+       "model_id": "6ff6ac08cb274ac1a583deac92bbdf82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -777,14 +777,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n"
+      "intervention_param:  0.7\n",
+      "cur_extra_test_sets[0].shape --  (100000, 730)\n",
+      "2023/10/18, 09:26:54: Tuning RandomForestClassifier...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 09:18:36 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-10-18 09:31:09 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
@@ -792,14 +794,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/18, 09:18:36: Tuning for RandomForestClassifier is finished [F1 score = 0.6448662703849747, Accuracy = 0.702970297029703]\n",
+      "2023/10/18, 09:31:09: Tuning for RandomForestClassifier is finished [F1 score = 0.644075687873559, Accuracy = 0.7021702170217022]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d976d01d3a5423aa4c53d8bc92dd0b6",
+       "model_id": "c1cf9dcae34c4d869ebcee850a2b2ac9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -813,7 +815,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d201f4ddd244fcf9ca5b5dd77451874",
+       "model_id": "84ce99c7bf0040f585098a897f6e2c1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -846,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b74df6d4",
+   "id": "bf942d04",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -854,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "495c451a",
+   "id": "00f80410",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -862,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e173e9",
+   "id": "817486de",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -870,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37bf2431",
+   "id": "a62b91a3",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c26dd3",
+   "id": "c27fcb9e",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -887,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b222a3e",
+   "id": "73b4901d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-18T11:25:26.890046Z",
